Fix integration test build failure: Enable C++ language in CMakeLists.txt
Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/applications/video_streaming_demo_enhanced/video_streaming_demo_server/CMakeLists.txt
+++ b/applications/video_streaming_demo_enhanced/video_streaming_demo_server/CMakeLists.txt
@@ -14,7 +14,7 @@
 # limitations under the License.
 
 cmake_minimum_required(VERSION 3.20)
-project(video_streaming_demo_server LANGUAGES NONE)
+project(video_streaming_demo_server LANGUAGES CXX)
 
 # Add C++ subdirectory
 add_subdirectory(cpp)
