--- a/applications/gstreamer/holopattern_to_gst/CMakeLists.txt
+++ b/applications/gstreamer/holopattern_to_gst/CMakeLists.txt
@@ -1,75 +1,33 @@
-cmake_minimum_required(VERSION 3.16)
-project(holopattern-to-gst-application C CXX)
+# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-License-Identifier: Apache-2.0
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+# http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
 
-# Set C and C++ standards
-set(CMAKE_C_STANDARD 99)
-set(CMAKE_C_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+cmake_minimum_required(VERSION 3.20)
+project(holopattern_to_gst CXX)
 
-# Find required packages
-find_package(PkgConfig REQUIRED)
-
-# Find Holoscan
 find_package(holoscan REQUIRED CONFIG
              PATHS "/opt/nvidia/holoscan" "/workspace/holoscan-sdk/install")
 
-# Find GStreamer
-pkg_check_modules(GSTREAMER REQUIRED gstreamer-1.0)
-pkg_check_modules(GSTREAMER_BASE REQUIRED gstreamer-base-1.0)
-pkg_check_modules(GSTREAMER_VIDEO REQUIRED gstreamer-video-1.0)
+add_executable(holopattern-to-gst
+  holopattern_to_gst.cpp
+)
 
-# Include directories
-include_directories(${GSTREAMER_INCLUDE_DIRS})
-include_directories(${GSTREAMER_BASE_INCLUDE_DIRS})
-include_directories(${GSTREAMER_VIDEO_INCLUDE_DIRS})
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../../operators/gstreamer)
-
-# Add the operators/gstreamer subdirectory
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../../operators/gstreamer ${CMAKE_CURRENT_BINARY_DIR}/operators_gstreamer)
-
-# Add compiler definitions
-add_definitions(${GSTREAMER_CFLAGS_OTHER})
-add_definitions(${GSTREAMER_BASE_CFLAGS_OTHER})
-add_definitions(${GSTREAMER_VIDEO_CFLAGS_OTHER})
-
-# Create executable
-add_executable(holopattern-to-gst holopattern_to_gst.cpp)
-
-# Link libraries
 target_link_libraries(holopattern-to-gst
-    ${GSTREAMER_LIBRARIES}
-    ${GSTREAMER_BASE_LIBRARIES}
-    ${GSTREAMER_VIDEO_LIBRARIES}
-    holoscan_gstreamer_sink
-    holoscan::core)
-
-# Set library directories
-link_directories(${GSTREAMER_LIBRARY_DIRS})
-link_directories(${GSTREAMER_BASE_LIBRARY_DIRS})
-link_directories(${GSTREAMER_VIDEO_LIBRARY_DIRS})
-
-# Set compile flags
-target_compile_options(holopattern-to-gst PRIVATE 
-    ${GSTREAMER_CFLAGS_OTHER} 
-    ${GSTREAMER_BASE_CFLAGS_OTHER} 
-    ${GSTREAMER_VIDEO_CFLAGS_OTHER})
-
-# Platform-specific settings
-if(APPLE)
-    # For macOS, we might need additional frameworks
-    find_library(FOUNDATION_FRAMEWORK Foundation)
-    find_library(COCOA_FRAMEWORK Cocoa)
-    if(FOUNDATION_FRAMEWORK AND COCOA_FRAMEWORK)
-        target_link_libraries(holopattern-to-gst ${FOUNDATION_FRAMEWORK} ${COCOA_FRAMEWORK})
-    endif()
-endif()
+  PRIVATE
+  holoscan::core
+  holoscan_gstreamer_sink
+)
 
 # Install target
-install(TARGETS holopattern-to-gst DESTINATION bin)
-
-# Print some information
-message(STATUS "GStreamer include dirs: ${GSTREAMER_INCLUDE_DIRS}")
-message(STATUS "GStreamer libraries: ${GSTREAMER_LIBRARIES}")
-message(STATUS "GStreamer library dirs: ${GSTREAMER_LIBRARY_DIRS}")
-
+install(TARGETS holopattern-to-gst DESTINATION bin/holopattern_to_gst)
