--- a/operators/CMakeLists.txt
+++ b/operators/CMakeLists.txt
@@ -26,6 +26,7 @@ add_holohub_operator(emergent_source DEPENDS EXTENSIONS emergent_source)
 add_holohub_operator(fft)
 add_holohub_operator(gamma_correction DEPENDS OPERATORS slang_shader)
 add_holohub_operator(grpc_operators)
+add_subdirectory(gstreamer)
 add_holohub_operator(high_rate_psd)
 add_holohub_operator(holoscan_ros2)
 add_holohub_operator(iio_controller)
