--- a/operators/gstreamer/CMakeLists.txt
+++ b/operators/gstreamer/CMakeLists.txt
@@ -53,6 +53,7 @@ add_library(holoscan_gstreamer_sink SHARED
   gst_sink_resource.cpp
   gst_sink_operator.cpp
   gst_src_resource.cpp
+  gst_src_operator.cpp
 )
 
 # Set library directories
@@ -114,6 +115,7 @@ install(FILES
     gst_sink_resource.hpp
     gst_sink_operator.hpp
     gst_src_resource.hpp
+    gst_src_operator.hpp
     core/initializer.hpp
     DESTINATION include/holoscan/operators/gstreamer)
 
