Add Python support for video streaming client and server
Signed-off-by: cdinea <cdinea@nvidia.com>
Signed-off-by: cdinea <cdinea@nvidia.com>

--- a/operators/video_streaming/streaming_client_enhanced/CMakeLists.txt
+++ b/operators/video_streaming/streaming_client_enhanced/CMakeLists.txt
@@ -280,3 +280,8 @@ install(FILES
 
 # Print status message
 message(STATUS "StreamingClient operator configuration complete with imported targets.")
+
+# Add Python bindings if requested
+if(HOLOHUB_BUILD_PYTHON)
+    add_subdirectory(python)
+endif()
