--- a/operators/video_streaming/streaming_server_enhanced/CMakeLists.txt
+++ b/operators/video_streaming/streaming_server_enhanced/CMakeLists.txt
@@ -204,3 +204,8 @@ install(EXPORT streaming_server_enhanced_targets
     NAMESPACE holoscan::ops::
     DESTINATION lib/cmake/holoscan
 )
+
+# Add Python bindings if requested
+if(HOLOHUB_BUILD_PYTHON)
+    add_subdirectory(python)
+endif()
