--- a/applications/video_streaming_demo_enhanced/video_streaming_demo_client/CMakeLists.txt
+++ b/applications/video_streaming_demo_enhanced/video_streaming_demo_client/CMakeLists.txt
@@ -18,3 +18,6 @@ project(video_streaming_demo_client LANGUAGES CXX)
 
 # Add C++ subdirectory
 add_subdirectory(cpp)
+
+# Add Python subdirectory
+add_subdirectory(python)
