--- a/applications/video_streaming_demo_enhanced/video_streaming_demo_server/python/CMakeLists.txt
+++ b/applications/video_streaming_demo_enhanced/video_streaming_demo_server/python/CMakeLists.txt
@@ -13,45 +13,50 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# Copy streaming_client_demo application file to both locations
-add_custom_target(python_streaming_client_demo_enhanced ALL
-  COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo.py" ${CMAKE_CURRENT_BINARY_DIR}
-  COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo.py" ${CMAKE_BINARY_DIR}
-  DEPENDS "streaming_client_demo.py"
-  BYPRODUCTS "streaming_client_demo.py"
+# Copy streaming_server_demo application file
+
+# Copy streaming_server_demo application file to both locations
+add_custom_target(python_streaming_server_demo_enhanced ALL
+  COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/streaming_server_demo.py" ${CMAKE_CURRENT_BINARY_DIR}
+  COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/streaming_server_demo.py" ${CMAKE_BINARY_DIR}
+  DEPENDS "streaming_server_demo.py"
+  BYPRODUCTS "streaming_server_demo.py"
 )
 
+# Also add a specific build target that the application can depend on
+add_custom_target(copy_server_python_files ALL DEPENDS python_streaming_server_demo_enhanced)
+
 # Copy YAML configuration files if they exist
-if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo.yaml")
+if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/streaming_server_demo.yaml")
   configure_file(
-    "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo.yaml"
-    "${CMAKE_CURRENT_BINARY_DIR}/streaming_client_demo.yaml"
+    "${CMAKE_CURRENT_SOURCE_DIR}/streaming_server_demo.yaml"
+    "${CMAKE_CURRENT_BINARY_DIR}/streaming_server_demo.yaml"
     COPYONLY
   )
 endif()
 
 # Add testing for Python application
 if(BUILD_TESTING)
-  add_test(NAME streaming_client_demo_python_test
-           COMMAND python3 streaming_client_demo.py --help
+  add_test(NAME streaming_server_demo_python_test
+           COMMAND python3 streaming_server_demo.py --help
            WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
   
-  set_tests_properties(streaming_client_demo_python_test PROPERTIES
-                       PASS_REGULAR_EXPRESSION "Streaming Client Demo"
+  set_tests_properties(streaming_server_demo_python_test PROPERTIES
+                       PASS_REGULAR_EXPRESSION "Streaming Server Demo"
                        FAIL_REGULAR_EXPRESSION "Error;ERROR;Failed")
 endif()
 
 # Install Python application
 install(
-  FILES streaming_client_demo.py
+  FILES streaming_server_demo.py
   DESTINATION bin/video_streaming_demo_enhanced/python
   PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
 )
 
 # Install configuration files
-if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/streaming_client_demo.yaml")
+if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/streaming_server_demo.yaml")
   install(
-    FILES streaming_client_demo.yaml
+    FILES streaming_server_demo.yaml
     DESTINATION bin/video_streaming_demo_enhanced/python
   )
 endif()
